--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/MMA-by-AFPA-students/Backend_ScoreManagment
 [submodule "frontend"]
 	path = frontend
-	url = git@github.com:MMA-by-AFPA-students/Front_ScoreManagment.git
+	url = https://github.com/MMA-by-AFPA-students/Front_ScoreManagment.git
