add db_scoremanagment module on global project

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/MMA-by-AFPA-students/Front_ScoreManagment.git
+[submodule "db_scoremanagment"]
+	path = db_scoremanagment
+	url = https://github.com/MMA-by-AFPA-students/db_scoremanagment
