Update .gitmodules pour utlisation de SSH
ATTENTION : ajout de de ploy KEYS uniques à chaque submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "backend"]
 	path = backend
-	url = https://github.com/MMA-by-AFPA-students/Backend_ScoreManagment
+	url = git@github.com:MMA-by-AFPA-students/Backend_ScoreManagment.git
 [submodule "frontend"]
 	path = frontend
-	url = https://github.com/MMA-by-AFPA-students/Front_ScoreManagment.git
+	url = git@github.com:MMA-by-AFPA-students/Front_ScoreManagment.git
 [submodule "db_scoremanagment"]
 	path = db_scoremanagment
-	url = https://github.com/MMA-by-AFPA-students/db_scoremanagment
+	url = git@github.com:MMA-by-AFPA-students/db_scoremanagment.git
