changed img size on nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -44,7 +44,7 @@ server {
   ssl_certificate_key /etc/nginx/conf.d/nginx-selfsigned.key;
 
   # TODO : limiter la taille de body client pour sécuriser vs DDOS
-  client_max_body_size 200000;
+  client_max_body_size 10M;
 
   location / {
       proxy_pass http://scoremanagment_front;
